--- a/OptimusTech/style.css
+++ b/OptimusTech/style.css
@@ -183,7 +183,16 @@ button {
     margin-bottom: 3em;
 }
 
-/* Dia 4 do Projeto */
+.caixa-vaga {
+    text-decoration: none;
+}
+
+.vaga:hover {
+    border-color: var(--vinho-principal);
+    transition: 0.5s;
+}
+
+/* Dia 5 do Projeto */
 
 .colaboradores {
     background-color: rgba(196, 25, 25, 0.03);
@@ -235,3 +244,53 @@ button {
     color: var(--cinza-principal);
     margin-bottom: 3em;
 }
+
+/* Dia 6 do Projeto */
+
+footer {
+    background-color: #F9FAFB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.titulo-footer {
+    font-size: 36px;
+    color: #101828;
+    font-weight: bold;
+    margin: 3em 0 0.5em;
+}
+
+.texto-footer {
+    font-size: 20px;
+    color: var(--cinza-principal);
+    margin-bottom: 2em;
+}
+
+.cadastro {
+    display: flex;
+    margin-bottom: 1em;
+}
+
+.email {
+    background: #FFFFFF;
+    border: 1px solid #D0D5DD;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+    border-radius: 8px;
+    margin-right: 1em;
+    padding: 1em;
+    outline: none;
+}
+
+.direitos {
+    font-size: 16px;
+    color: var(--cinza-principal);
+    margin-bottom: 3em;
+}
+
+footer ::placeholder {
+    font-size: 16px;
+    color: #667085;
+}
+
+/* Dia 7 do Projeto */
